syntax = "proto3";

package grpc;

option go_package ="github.com/Cristian-Jara/SDLab2.git/proto";

message JoinRequest {
    string request = 1; // Para solicitud
}

message JoinReply {
    string reply = 1; // Para respuesta
    string player = 2; // Para el número del jugador
}
message GameStarted {
    string body = 1; // Aviso de inicio de la etapa
    string type = 2;
}

message SendPlay {
    string player = 1; // Número jugador
    int32 plays = 2; // Jugada realizada
    string stage = 3; // Etapa actual
    int32 round = 4; // Ronda actual
    int32 score = 5; // Puntaje obtenido
    
}

message SendResult {
    string stage = 1; // Etapa
    bool alive = 2; // Resultado si sobrevivio o no
    int32 round = 3; // Ronda actual
    bool started =5; // Si comienza 
}
message MoneyAmount {
    string money = 1;
}

message PlayerInfo{
    string message = 1;
}

service ChatService {
    rpc JoinToGame(JoinRequest) returns (JoinReply); // Para unirse al juego
    rpc StageOrRoundStarted(GameStarted) returns (GameStarted); //Para preguntar si inicia la etapa o la ronda siguiente
    rpc SendPlays(SendPlay) returns (SendResult); // Para enviar las jugadas
    rpc GetMoneyAmount(MoneyAmount) returns (MoneyAmount); //Para solicitar la cantidad de dinero
    rpc GetPlayerInfo(PlayerInfo) returns (PlayerInfo);
}